// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > schema > postSchema > audit > expected call 1`] = `
{
  "description": "Three yellowtail kingfish with okra, beans, dried chinese broccoli, parsnip and goat milk. With a side of baked pear, and your choice of soy flour or jarrahdale pumpkin.",
  "id": "expedita",
  "jsonSchema": {},
  "kind": "accessRequest",
  "name": "Dr. Garry Cummerata",
  "reviewRoles": [
    "expedita",
    "expedita",
    "expedita",
    "expedita",
  ],
}
`;

exports[`routes > schema > postSchema > successfully stores the schema 1`] = `
{
  "schema": {
    "description": "Three yellowtail kingfish with okra, beans, dried chinese broccoli, parsnip and goat milk. With a side of baked pear, and your choice of soy flour or jarrahdale pumpkin.",
    "id": "expedita",
    "jsonSchema": {},
    "kind": "accessRequest",
    "name": "Dr. Garry Cummerata",
    "reviewRoles": [
      "expedita",
      "expedita",
      "expedita",
      "expedita",
    ],
  },
}
`;
